CHANGES IN VERSION 1.15.5
------------------------
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 1.15.4
------------------------
 o according to the update of DOSE <2015-12-20, Sun>
 
CHANGES IN VERSION 1.15.3
------------------------
 o update citation info <2015-11-24, Tue>
 
CHANGES IN VERSION 1.15.2
------------------------
 o update vignette <2015-11-16, Mon>
 
CHANGES IN VERSION 1.15.1
------------------------
 o update vignette <2015-10-28, Wed>
 
CHANGES IN VERSION 1.14.0
------------------------
 o BioC 3.2 Branch
  
CHANGES IN VERSION 1.13.5
------------------------
 o add support of fly (Drosophila melanogaster) <2015-09-22, Tue>
 
CHANGES IN VERSION 1.13.4
------------------------
 o update vignette <2015-08-19, Wed>
 
CHANGES IN VERSION 1.13.3
------------------------
 o add citation of ChIPseeker <2015-07-09, Thu>
 o add 'Pathway analysis of NGS data' section in vignette <2015-06-29, Mon>
 o convert vignette from Rnw to Rmd <2015-06-29, Mon>
 
CHANGES IN VERSION 1.13.2
------------------------
 o enable other organisms for viewPathway by Vladislav Petyuk <2015-05-28, Thu>
   see https://github.com/GuangchuangYu/ReactomePA/pull/1
 
CHANGES IN VERSION 1.13.1
------------------------
 o update enrichMap and viewPathway <2015-05-13, Wed>
 
CHANGES IN VERSION 1.11.9
------------------------
 o use mapIds instead of mget in TERM2NAME. mapIds will not throw error when pathID is old/deprecated. <2015-04-10, Fri>
 
CHANGES IN VERSION 1.11.8
------------------------
 o according to https://support.bioconductor.org/p/63024/#66438, modify gsePathway to only test pathways. <2015-04-09, Thu>
 
CHANGES IN VERSION 1.11.7
------------------------
 o update use_internal_data parameter to ... according to the change of DOSE <2015-04-01, Wed>

CHANGES IN VERSION 1.11.6
------------------------
 o update according to DOSE <2015-03-31, Tue>
   add use_internal_data parameter in internal functional of enrichPathway.
 
CHANGES IN VERSION 1.11.5