@@ -5,8 +5,8 @@
 \title{gsePathway}
 \usage{
 gsePathway(geneList, organism = "human", exponent = 1, nPerm = 1000,
-  minGSSize = 10, pvalueCutoff = 0.05, pAdjustMethod = "BH",
-  verbose = TRUE, seed = FALSE)
+  minGSSize = 10, maxGSSize = 500, pvalueCutoff = 0.05,
+  pAdjustMethod = "BH", verbose = TRUE, seed = FALSE)
 }
 \arguments{
 \item{geneList}{order ranked geneList}
@@ -18,6 +18,8 @@ gsePathway(geneList, organism = "human", exponent = 1, nPerm = 1000,
 \item{nPerm}{permutation numbers}
 
 \item{minGSSize}{minimal size of each geneSet for analyzing}
+
+\item{maxGSSize}{maximal size of each geneSet for analyzing}
 
 \item{pvalueCutoff}{pvalue Cutoff}
 
